# gamelibs-tracy

./: .gitattributes  .gitignore  CMakeLists.txt  Tracy.hpp  TracyClient.cpp  meson.build  meson.options  meson_options.txt
client/: TracyCallstack.cpp  TracyCallstack.hpp  TracyDxt1.cpp  TracyProfiler.cpp  TracyProfiler.hpp  TracySysTrace.cpp
cmake/: config.cmake  vendor.cmake
common/: TracyYield.hpp
msvc/: tracy.vcxproj
profiler/: CMakeLists.txt
profiler/macos/: Info.plist.in  icon.icns
profiler/src/: BackendGlfw.cpp  HttpRequest.cpp  ResolvService.hpp  main.cpp  winmain.cpp
profiler/src/imgui/: imgui_impl_glfw.cpp
profiler/src/profiler/: TracyImGui.hpp  TracyLlm.cpp  TracyLlm.hpp  TracyLlmTools.cpp  TracyLlmTools.hpp  TracySourceView.cpp  TracySourceView.hpp  TracyUtility.cpp  TracyUtility.hpp  TracyView.cpp  TracyView.hpp  TracyView_Compare.cpp  TracyView_Memory.cpp  TracyView_Samples.cpp
public/: TracyClient.cpp
public/client/: TracyCallstack.cpp  TracyCallstack.hpp  TracyDxt1.cpp  TracyProfiler.cpp  TracyProfiler.hpp  TracySysTrace.cpp  TracyTimer.hpp  tracy_concurrentqueue.h  tracy_rpmalloc.cpp
public/common/: TracyProtocol.hpp  TracyQueue.hpp  TracySystem.cpp  TracySystem.hpp  TracyYield.hpp  tracy_lz4.cpp
public/libbacktrace/: config.h
public/tracy/: Tracy.hpp  TracyD3D11.hpp  TracyD3D12.hpp  TracyOpenGL.hpp  TracyVulkan.hpp
server/: TracyFileRead.hpp  TracyFileWrite.hpp  TracyMmap.cpp  TracyPopcnt.hpp  TracySourceView.cpp  TracySourceView.hpp  TracyView_Memory.cpp  TracyWorker.cpp  TracyWorker.hpp  tracy_robin_hood.h
(+1 files in other folders)
